# cinema-scraper-mvp

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
app/: main.py
app/api/: routes.py
app/core/: config.py
app/db/: session.py
app/models/: __init__.py  cinema.py
app/schemas/: cinema.py
app/scrapers/: acecinema.py  ambassador.py  base.py  breezecinemas.py  broadway.py  carnival.py  ccmovie.py  cm_movie.py  eslite.py  governor.py  halarcity.py  ilanmovie.py  in89.py  kfa.py  lunacinemax.py  luxcinema.py  machi.py  madou.py  miramar.py  miranew.py  mldcinema.py  nantai.py  nantou.py  opentix.py  sbc.py  shanming.py  showtime_cinemas.py  skcinemas.py  spot.py  spot_hs.py  srm.py  timescinema.py  tmovies.py  ucc.py  uch.py  venice.py  vieshow.py  wonderful.py
app/services/: importer.py
app/utils/: trailers.py  youtube_api.py  youtube_web.py
cinema_scraper_mvp.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
deploy/systemd/: cinema-api.service  cinema-scrape.service  cinema-scrape.timer
scripts/: dedupe_movies.py  enrich_trailers.py  init_db.py  scheduler.py  scrape.py
