[project]
name = "cinema-scraper-mvp"
version = "0.1.0"
description = "MVP scraper/API for Taiwan cinema showtimes"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "sqlalchemy>=2.0.30",
  "psycopg[binary]>=3.2.0",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.4.0",
  "python-dotenv>=1.0.1",
  "playwright>=1.45.0",
  "beautifulsoup4>=4.12.3",
  "lxml>=5.2.0",
  "typer>=0.12.3",
  "apscheduler>=3.10.4",
]

[project.optional-dependencies]
dev = ["ruff>=0.5.0"]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
line-length = 100
